--- a/festival.css
+++ b/festival.css
@@ -651,6 +651,11 @@ ul {
     .container-photo {
         width: 50%;
     }
+
+    .konkursbox{
+        height: 800px;
+    }
+    
 }
 
 @media (max-width: 700px) {
@@ -680,8 +685,19 @@ ul {
     .main2{
         height: 300px;
     }
-}
 
+    .main3{
+        height: 400px!important ;
+    }
+    
+    .deadline{
+        margin-top: 120px;
+    }
+
+    .container-text-photos{
+        margin-top: 230px;
+    }
+}
 @media (max-width: 600px) {
     .hamburger-list {
         width: 300px;
