--- a/foto.css
+++ b/foto.css
@@ -1,38 +1,45 @@
 .lightgallery {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
 }
 
 .lightgallery .image {
-    margin: 6px;
-    width: calc(33% - 12px);
+	margin: 6px;
+	width: calc(33% - 12px);
 }
 
 
 .lightgallery .image img {
-    width: 100%;
+	width: 100%;
 }
 
-.gallery-title{
-    font-size: 18px;
-    text-align: center;
-    color: #c0c0c0;
-    margin-top: 20px;
-    margin-bottom: 20px;
+.gallery-title {
+	font-size: 18px;
+	text-align: center;
+	color: #c0c0c0;
+	margin-top: 20px;
+	margin-bottom: 20px;
+
+}
+
+@media (max-width: 993px) {
+	#footer {
+		visibility: hidden;
+	}
 
 }
 
 @media (max-width: 700px) {
-    .lightgallery .image {
-        width: calc(50% - 12px);
-    }
+	.lightgallery .image {
+		width: calc(50% - 12px);
+	}
 }
 
 @media (max-width: 400px) {
-    .lightgallery .image {
-        width: 100%;
-    }
+	.lightgallery .image {
+		width: 100%;
+	}
 }
 
 body {
