--- a/team.css
+++ b/team.css
@@ -158,6 +158,7 @@ body {
     margin-bottom: 50px;
     padding: 30px;
     background-color: rgb(9, 9, 9);
+    flex-direction: column;
 
 }
 .p-team{
