--- a/team.css
+++ b/team.css
@@ -298,6 +298,18 @@ ul{
 		padding-bottom: 10px;
     }
 
+    .box-1-team{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+        margin-bottom: 50px;
+        padding: 30px;
+        background-color: rgb(9, 9, 9);
+        flex-direction: column;
+    
+    }
+
 }
 @media (max-width: 500px) {
 	.logo-calisia {
