--- a/rules.css
+++ b/rules.css
@@ -28,6 +28,14 @@ body {
     z-index: 999;
 }
 
+.gold-gold2{
+    font-size: 40px;
+}
+
+.new-gold {
+    font-size: 25;
+    font-weight: 300;
+}
 .navbar-collapse {
     display: flex;
     flex-wrap: wrap;
